umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@rdkit_2217_OC(=O)C[CH](S)C(O)=O_3592.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: basic_opensmiles
category: basic_opensmiles
basic_opensmiles:
  success: true
  summary:
    sum_formula: C4O4S
    atom_count: 9
    bond_count: 8
